feat: add kusion module apis for server
